Estructura superior finalizada

--- a/PorfolioDePueba/src/index.html
+++ b/PorfolioDePueba/src/index.html
@@ -6,16 +6,43 @@
     <link href="./output.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-black">
+  <body class="bg-red-500">
     <div class="flex w-full justify-center">
-      <div class="block h-full w-4/5  bg-slate-600">
-        <div class="flex w-full justify-center">
-          <div class="flex h-9 w-64 justify-center rounded-full border border-black bg-black align-middle my-7">
-            <p class=" text-white">sdsd</p>
-            <p>sdsd</p>
-            <p>asdsd</p>
-          </div>
+      <div class="flex w-full justify-center bg-black md:w-4/5">
+        <div
+          class="my-5 flex h-12 w-72 items-center justify-center rounded-3xl bg-slate-500"
+        >
+          <ul class="flex">
+            <li class="px-2 text-white">
+              <a href="#" class="hover:text-black">asd</a>
+            </li>
+            <li class="px-2"><a href="#">asd</a></li>
+            <li class="px-2"><a href="#">asd</a></li>
+            <li class="px-2"><a href="#">asd</a></li>
+          </ul>
         </div>
+      </div>
+    </div>
+    <div class="flex w-full justify-center">
+      <div class="block w-full justify-center bg-yellow-500 md:w-4/5">
+        <div class="flex w-full justify-start">
+          <img
+            src="../img/pf.jpg"
+            alt=""
+            srcset=""
+            class="my-4 ml-4 size-20 rounded-full"
+          />
+        </div>
+        <div class="w-1/2 pl-5">
+          <h1 class="mb-5 text-2xl">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit
+          </h1>
+          <p class="">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum
+            obcaecati facilis nam, id expedita nihil asperiores hic dolorem
+            vero? Perspiciatis quia ab blanditiis, voluptatem magnam fuga
+            facilis nisi nihil deserunt.
+          </p>
         </div>
       </div>
     </div>
