Acabamos la extructura superior y empezamos la inferior

--- a/PorfolioDePueba/src/index.html
+++ b/PorfolioDePueba/src/index.html
@@ -12,13 +12,19 @@
         <div
           class="my-5 flex h-12 w-72 items-center justify-center rounded-3xl bg-slate-500"
         >
-          <ul class="flex">
-            <li class="px-2 text-white">
-              <a href="#" class="hover:text-black">asd</a>
+          <ul class="flex text-white">
+            <li class="px-2">
+              <a href="#" class="hover:text-black">Asd</a>
             </li>
-            <li class="px-2"><a href="#">asd</a></li>
-            <li class="px-2"><a href="#">asd</a></li>
-            <li class="px-2"><a href="#">asd</a></li>
+            <li class="px-2">
+              <a href="#" class="hover:text-black">Asd</a>
+            </li>
+            <li class="px-2">
+              <a href="#" class="hover:text-black">Asd</a>
+            </li>
+            <li class="px-2">
+              <a href="#" class="hover:text-black">Asd</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -33,16 +39,46 @@
             class="my-4 ml-4 size-20 rounded-full"
           />
         </div>
-        <div class="w-1/2 pl-5">
+        <div class="w-full pl-5 md:w-2/3">
           <h1 class="mb-5 text-2xl">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit
           </h1>
-          <p class="">
+          <p class="mb-4">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum
             obcaecati facilis nam, id expedita nihil asperiores hic dolorem
             vero? Perspiciatis quia ab blanditiis, voluptatem magnam fuga
             facilis nisi nihil deserunt.
           </p>
+          <div class="my-6 flex w-full">
+            <img
+              src="../img/twitter-boxed-svgrepo-com.svg"
+              alt=""
+              class="mr-6 w-6"
+            />
+            <img
+              src="../img/github-142-svgrepo-com.svg"
+              alt=""
+              class="mr-6 w-6"
+            />
+            <img
+              src="../img/instagram-svgrepo-com.svg"
+              alt=""
+              class="mr-6 w-6"
+            />
+            <img
+              src="../img/linkedin-svgrepo-com.svg"
+              alt=""
+              class="mr-6 w-6"
+            />
+          </div>
+        </div>
+        <div class="w-full bg-white">
+          <div class="mx-4 w-full">
+            <p class="my-1">Fecha</p>
+            <h1 class="text-xl">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </h1>
+          </div>
         </div>
       </div>
     </div>
