--- a/PorfolioDePueba/src/index.html
+++ b/PorfolioDePueba/src/index.html
@@ -40,7 +40,7 @@
           />
         </div>
         <div class="w-full pl-5 md:w-2/3">
-          <h1 class="mb-5 text-2xl">
+          <h1 class="mb-5 text-2xl font-bold">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit
           </h1>
           <p class="mb-4">
@@ -72,12 +72,84 @@
             />
           </div>
         </div>
-        <div class="w-full bg-white">
-          <div class="mx-4 w-full">
-            <p class="my-1">Fecha</p>
-            <h1 class="text-xl">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit
-            </h1>
+        <div class="flex w-full">
+          <div class="w-full md:w-1/2">
+            <div class="mb-5 flex w-full justify-center px-4">
+              <div
+                class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
+              >
+                <p class="pb-2 pt-3">| Fecha</p>
+                <h1 class="pb-1 text-lg font-bold">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit
+                </h1>
+                <p class="pb-4">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+                  numquam corrupti officiis, iusto optio unde, aperiam quam,
+                  deleniti facilis delectus sapiente nulla in ad magnam saepe
+                  commodi dicta voluptates error?
+                </p>
+              </div>
+            </div>
+            <div class="mb-5 flex w-full justify-center px-4">
+              <div
+                class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
+              >
+                <p class="pb-2 pt-3">| Fecha</p>
+                <h1 class="pb-1 text-lg font-bold">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit
+                </h1>
+                <p class="pb-4">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+                  numquam corrupti officiis, iusto optio unde, aperiam quam,
+                  deleniti facilis delectus sapiente nulla in ad magnam saepe
+                  commodi dicta voluptates error?
+                </p>
+              </div>
+            </div>
+            <div class="mb-5 flex w-full px-4 md:justify-center">
+              <div
+                class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
+              >
+                <p class="pb-2 pt-3">| Fecha</p>
+                <h1 class="pb-1 text-lg font-bold">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit
+                </h1>
+                <p class="pb-4">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+                  numquam corrupti officiis, iusto optio unde, aperiam quam,
+                  deleniti facilis delectus sapiente nulla in ad magnam saepe
+                  commodi dicta voluptates error?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="mb-5 w-full md:w-1/2">
+            <div class="flex w-full justify-center">
+              <div class="md: mx-4 w-4/6 rounded-lg border bg-red-700">
+                <div class="flex w-full justify-start pl-4 pt-3">
+                  <img
+                    src="../img/mail_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg"
+                    alt=""
+                    class="mr-6 w-6"
+                  />
+                  <p class="text-lg font-bold">Stay up date</p>
+                </div>
+                <div class="flex w-full justify-start pb-6 pl-4 pt-3">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Commodi tempora possimus in incidunt, vitae mollitia
+                    corrupti
+                  </p>
+                </div>
+                <div class="mx-4 mb-4 flex w-full justify-start">
+                  <input
+                    type="text"
+                    class="mr-3 h-8 rounded-lg border border-black md:h-10 md:w-9/12"
+                  />
+                  <button class="w-20 rounded-lg bg-slate-700">Join</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
