Terminamos apartado de trabajo y de correo , falta el footer

--- a/PorfolioDePueba/src/index.html
+++ b/PorfolioDePueba/src/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="flex w-full justify-center">
+    <div class="w-full justify-center md:flex">
       <div class="block w-full justify-center bg-yellow-500 md:w-4/5">
         <div class="flex w-full justify-start">
           <img
@@ -72,9 +72,9 @@
             />
           </div>
         </div>
-        <div class="flex w-full">
+        <div class="w-full md:flex">
           <div class="w-full md:w-1/2">
-            <div class="mb-5 flex w-full justify-center px-4">
+            <div class="mb-20 flex w-full justify-center px-4">
               <div
                 class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
               >
@@ -90,7 +90,7 @@
                 </p>
               </div>
             </div>
-            <div class="mb-5 flex w-full justify-center px-4">
+            <div class="mb-20 flex w-full justify-center px-4">
               <div
                 class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
               >
@@ -106,7 +106,7 @@
                 </p>
               </div>
             </div>
-            <div class="mb-5 flex w-full px-4 md:justify-center">
+            <div class="mb-20 flex w-full px-4 md:justify-center">
               <div
                 class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
               >
@@ -123,9 +123,11 @@
               </div>
             </div>
           </div>
-          <div class="mb-5 w-full md:w-1/2">
-            <div class="flex w-full justify-center">
-              <div class="md: mx-4 w-4/6 rounded-lg border bg-red-700">
+          <div class="w-full md:w-1/2">
+            <div class="mb-5 flex w-full justify-center">
+              <div
+                class="w-11/12 rounded-lg border bg-red-700 md:mx-4 md:w-4/6"
+              >
                 <div class="flex w-full justify-start pl-4 pt-3">
                   <img
                     src="../img/mail_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg"
@@ -144,14 +146,99 @@
                 <div class="mx-4 mb-4 flex w-full justify-start">
                   <input
                     type="text"
-                    class="mr-3 h-8 rounded-lg border border-black md:h-10 md:w-9/12"
+                    class="mr-3 h-8 w-3/5 rounded-lg border border-black md:h-10 md:w-9/12"
                   />
                   <button class="w-20 rounded-lg bg-slate-700">Join</button>
                 </div>
               </div>
             </div>
+            <div class="flex w-full justify-center">
+              <div
+                class="w-11/12 rounded-lg border bg-red-600 md:mb-4 md:w-4/6"
+              >
+                <div class="ali flex w-full justify-start py-3 pl-4">
+                  <img
+                    src="../img/home_repair_service_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg"
+                    alt=""
+                    class="mr-6 w-6"
+                  />
+                  <p class="text-lg font-bold">Work</p>
+                </div>
+                <div class="w-full">
+                  <div class="flex w-full align-middle">
+                    <img
+                      src="../img/pf.jpg"
+                      alt=""
+                      srcset=""
+                      class="my-4 ml-4 size-14 rounded-full border-2"
+                    />
+                    <div class="block w-3/5">
+                      <div class="flex w-full justify-start pl-3 pt-5">
+                        <p class="font-bold">Lorem ipsum dolor</p>
+                      </div>
+                      <div class="flex w-full justify-start pl-3">
+                        <p>Lorem ipsum</p>
+                      </div>
+                    </div>
+                    <div class="flex w-1/4 justify-center pt-5 align-bottom">
+                      <p>fecha</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="w-full">
+                  <div class="flex w-full align-middle">
+                    <img
+                      src="../img/pf.jpg"
+                      alt=""
+                      srcset=""
+                      class="my-4 ml-4 size-14 rounded-full border-2"
+                    />
+                    <div class="block w-3/5">
+                      <div class="flex w-full justify-start pl-3 pt-5">
+                        <p class="font-bold">Lorem ipsum dolor</p>
+                      </div>
+                      <div class="flex w-full justify-start pl-3">
+                        <p>Lorem ipsum</p>
+                      </div>
+                    </div>
+                    <div class="flex w-1/4 justify-center pt-5 align-bottom">
+                      <p>fecha</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="w-full">
+                  <div class="flex w-full align-middle">
+                    <img
+                      src="../img/pf.jpg"
+                      alt=""
+                      srcset=""
+                      class="my-4 ml-4 size-14 rounded-full border-2"
+                    />
+                    <div class="block w-3/5">
+                      <div class="flex w-full justify-start pl-3 pt-5">
+                        <p class="font-bold">Lorem ipsum dolor</p>
+                      </div>
+                      <div class="flex w-full justify-start pl-3">
+                        <p>Lorem ipsum</p>
+                      </div>
+                    </div>
+                    <div class="flex w-1/4 justify-center pt-5 align-bottom">
+                      <p>fecha</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="flex w-full justify-center pb-4">
+                  <button
+                    class="mt-2 w-3/4 rounded-lg bg-orange-500 text-lg font-bold"
+                  >
+                    Download CV
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <hr />
       </div>
     </div>
   </body>
