Pagina terminada , pede que añada algun retoque

--- a/PorfolioDePueba/src/index.html
+++ b/PorfolioDePueba/src/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="w-full md:flex">
           <div class="w-full md:w-1/2">
-            <div class="mb-20 flex w-full justify-center px-4">
+            <div class="mb-10 flex w-full px-4 md:mb-20 md:justify-center">
               <div
                 class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
               >
@@ -90,7 +90,7 @@
                 </p>
               </div>
             </div>
-            <div class="mb-20 flex w-full justify-center px-4">
+            <div class="mb-10 flex w-full px-4 md:mb-20 md:justify-center">
               <div
                 class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
               >
@@ -106,7 +106,7 @@
                 </p>
               </div>
             </div>
-            <div class="mb-20 flex w-full px-4 md:justify-center">
+            <div class="mb-10 flex w-full px-4 md:mb-20 md:justify-center">
               <div
                 class="w-full rounded-lg delay-150 md:w-11/12 md:px-4 md:hover:bg-slate-400"
               >
@@ -152,7 +152,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex w-full justify-center">
+            <div class="mb-6 flex w-full justify-center">
               <div
                 class="w-11/12 rounded-lg border bg-red-600 md:mb-4 md:w-4/6"
               >
@@ -229,7 +229,7 @@
                 </div>
                 <div class="flex w-full justify-center pb-4">
                   <button
-                    class="mt-2 w-3/4 rounded-lg bg-orange-500 text-lg font-bold"
+                    class="mt-2 w-3/4 rounded-lg border bg-orange-500 py-1.5 text-lg font-bold"
                   >
                     Download CV
                   </button>
@@ -238,7 +238,22 @@
             </div>
           </div>
         </div>
-        <hr />
+        <hr
+          class="md:mb-5 md:mt-5 md:flex md:h-1 md:w-full md:justify-center md:border-0 md:bg-black md:px-4"
+        />
+        <div
+          class="hidden h-11 w-full justify-center align-middle text-lg font-bold md:my-14 md:flex"
+        >
+          <div class="w-1/2 pl-28">
+            <a href="#" class="pr-10">Lorem</a>
+            <a href="#" class="pr-10">Lorem</a>
+            <a href="#" class="pr-10">Lorem</a>
+            <a href="#" class="pr-10">Lorem</a>
+          </div>
+          <div class="flex w-1/2 justify-end pr-12">
+            <p>Lorem ipsum dolor sit amet consectetur</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
